Waypoint on mymaps.google.com replacement
* collections for locations
* leaflet integration for waypoint display
* import data from mymaps.google.com (exported to kmz, imported with custom script (included))
* Use leaflet awesome maerks and marker clusters to enhance experience
* remove some stock jekyll stuff:
    * busted jekyll-feed plugin (for posts)
    * kill footer
    * about page
    * default post
* try to be DRY
* add debug mode function
* itemized todo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,28 +7,30 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-  {{ content }}
+		<!-- The Map -->
+		<div id="map" style="height: 600px;" >
+				{% include leaflet.html %}
+		</div>
 
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
+		<!-- Add waypoints! -->
+		<script>
+		{% for item in site.waypoints %}
+				{% assign lat = item.latlng[0] %}
+				{% assign lng = item.latlng[1] %}
+				{% assign layer = item.layer %}
+				{% assign header = item.title | escape %}
+				{% assign header = item.title | escape %}
 
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-  {%- endif -%}
+				{% if item.description == empty %}
+						{% assign desc = '' %}
+				{% else %}
+						{% assign desc = item.description | escape | prepend: "<br>" %}
+				{% endif %}
 
+				L.marker(
+						[{{ lat }}, {{ lng }}], 
+						{'icon': layers['{{layer}}']['icon']})
+				.bindPopup("<a href='{{item.url}}'><strong>{{ header }}</strong></a>{{ desc }}").addTo(layers['{{ layer }}']['layer']);
+		{% endfor %}
+		</script>
 </div>
