--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,22 +15,8 @@ layout: default
 		<!-- Add waypoints! -->
 		<script>
 		{% for item in site.waypoints %}
-				{% assign lat = item.latlng[0] %}
-				{% assign lng = item.latlng[1] %}
-				{% assign layer = item.layer %}
-				{% assign header = item.title | escape %}
-				{% assign header = item.title | escape %}
-
-				{% if item.description == empty %}
-						{% assign desc = '' %}
-				{% else %}
-						{% assign desc = item.description | escape | prepend: "<br>" %}
-				{% endif %}
-
-				L.marker(
-						[{{ lat }}, {{ lng }}], 
-						{'icon': layers['{{layer}}']['icon']})
-				.bindPopup("<a href='{{item.url}}'><strong>{{ header }}</strong></a>{{ desc }}").addTo(layers['{{ layer }}']['layer']);
+				{%- include waypoint_to_js.html content=item target="" -%}
 		{% endfor %}
 		</script>
+
 </div>
