Make sure to display location content below map

--- a/_layouts/waypoint-detail.html
+++ b/_layouts/waypoint-detail.html
@@ -14,5 +14,7 @@ layout: default
 				{%- include waypoint_to_js.html content=page target="map" -%}
 		</script>
 
+		<p>{{ page.content }}</p>
+
 
 </div>
