--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
   {%- endif -%}
 
 		<!-- The Map -->
-		<div id="map" style="height: 600px;" >
+		<div id="map" style="margin: 0 auto;">
 				{% include leaflet.html %}
 		</div>
 
