--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,4 +30,7 @@
 		<!-- After Leaflet script -->
 		<script src="https://unpkg.com/leaflet.featuregroup.subgroup@1.0.2/dist/leaflet.featuregroup.subgroup.js"></script>
 
+		<!-- JQuery -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </head>
