--- a/_includes/waypoint_to_js.html
+++ b/_includes/waypoint_to_js.html
@@ -1,23 +1,20 @@
 {% assign layer = include.content.layer %}
 {% assign header = include.content.title | escape %}
 {% assign header = include.content.title | escape %}
-
 {% if include.content.description == empty %}
 		{% assign desc = '' %}
 {% else %}
 		{% assign desc = include.content.description | escape | prepend: "<br>" %}
 {% endif %}
-
 {% if include.target == "map" %}
 		{% assign my_target = "map" %}
 {% else %}
 		{% assign my_target = layer | prepend: "layers['" | append: "']['layer']" %}
 {% endif %}
-
-{% for coord in include.content.latlng %}
+{%- for coord in include.content.latlng %}
 		L.marker(
 				[{{ coord }}],
 				{'icon': layers['{{ layer }}']['icon']})
 				.bindPopup("<a href='{{ include.content.url }}'><strong>{{ header }}</strong></a>{{ desc }}").addTo({{ my_target }});
-{% endfor %}
+{%- endfor -%}
 
