--- a/_layouts/location-detail.html
+++ b/_layouts/location-detail.html
@@ -11,7 +11,7 @@ layout: default
 		</div>
 
 		<script>
-				{%- include waypoint_to_js.html content=page target="map" -%}
+				{%- include location_to_js.html content=page target="map" -%}
 		</script>
 
 		<p>{{ page.content }}</p>
