--- a/_includes/location_to_js.html
+++ b/_includes/location_to_js.html
@@ -21,7 +21,9 @@
 								'coord': '{{ coord }}',
 								'md_url': '{{ include.content.url }}'
 						}
-						ajaxpopup(e, data)})
+						ajaxpopup(e, data);
+				})
+
 				.addTo({{ my_target }});
 {%- endfor -%}
 
