Add link to foursquare's api to about popup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 				<div class="modaldialog" id="dialog-about" title="About">
 						<p>{{ site.description | escape }}</p>
 						<p>Curated by <a href="http://heavyimage.com">Jesse Spielman</a>, with plenty of suggestions from friends!</p>
+						<p>Extra infoformation / photos via <a href="https://developer.foursquare.com/places-api">Foursquare's</a> Places API</p>
 				</div>
 
 		</body>
